fixed bugs in landing page

--- a/client/src/pages/Chat-App/Login/Login.css
+++ b/client/src/pages/Chat-App/Login/Login.css
@@ -28,7 +28,7 @@
 }
 .login-form button {
     padding: 10px;
-    background-color: #077EFF;
+    background-color: black;
     color: white;
     font-size: 16px;
     border: none;
