--- a/client/src/pages/Chat-App/ProfileUpdate/ProfileUpdate.css
+++ b/client/src/pages/Chat-App/ProfileUpdate/ProfileUpdate.css
@@ -50,7 +50,7 @@
 .profile form button {
     border: none;
     color: white;
-    background-color: #077eff;
+    background-color: black;
     padding: 8px;
     font-size: 16px;
     cursor: pointer;
